template.yaml
Resources:
  SGADB53937:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Permitir SSH y HTTP
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: SSH
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 0.0.0.0/0
          Description: HTTP
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80
      VpcId: vpc-0d3de6683d31c1f97
    Metadata:
      aws:cdk:path: VmStack/SG/Resource
  VMDesarrolloInstanceRole6720DCB1:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
        Version: "2012-10-17"
      Tags:
        - Key: Name
          Value: VmStack/VMDesarrollo
    Metadata:
      aws:cdk:path: VmStack/VMDesarrollo/InstanceRole/Resource
  VMDesarrolloInstanceProfileB8FCA0BB:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - Ref: VMDesarrolloInstanceRole6720DCB1
    Metadata:
      aws:cdk:path: VmStack/VMDesarrollo/InstanceProfile
  VMDesarrolloFE2CE572:
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone: us-east-1a
      BlockDeviceMappings:
        - DeviceName: /dev/xvda
          Ebs:
            VolumeSize: 20
      IamInstanceProfile:
        Ref: VMDesarrolloInstanceProfileB8FCA0BB
      ImageId: ami-053b0d53c279acc90
      InstanceType: t2.micro
      KeyName: vockey
      SecurityGroupIds:
        - Fn::GetAtt:
            - SGADB53937
            - GroupId
      SubnetId: subnet-08216dfd34fea2bff
      Tags:
        - Key: Name
          Value: VmStack/VMDesarrollo
      UserData:
        Fn::Base64: "#!/bin/bash"
    DependsOn:
      - VMDesarrolloInstanceRole6720DCB1
    Metadata:
      aws:cdk:path: VmStack/VMDesarrollo/Resource
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Analytics: v2:deflate64:H4sIAAAAAAAA/7VRy27CMBD8FnysTApUqqrcKJWqXFoUeotQZTYLuHHWqR+gyMq/V3kBvfTWg+Xd8cx47F1E86fHaDYRZzuFvJgquYvCxgkoeIpWewOYsTvG/1hbLs72MyAsorBB8Ea6+tVoX2WBnSpgcccTSunzUql373baU85iZzxylqMFIysnNXXMhgcm8jyhg0FrU6+QxVlgICghJQl7pNeCJkJopXa4xZP89pjko1VzCflvvlu+2tOvd/OErBMEmAUmh/KjrnDwKgUcJWFSisMIXb9ppzQUL3iSgLYLmHf1mygvXK380DRbzgqsbw7tbY6Rs9rTmKjhUpRRSLVqwwlrfYn5c83iwCojCWQl1BJAe3Lj3DpOK1jCdUi9a4veuq+N3kuFTdPwde2Omu4fovksmi8mX1bKqfHkZIlR2u8/fUutx3sCAAA=
    Metadata:
      aws:cdk:path: VmStack/CDKMetadata/Default
Parameters:
  BootstrapVersion:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /cdk-bootstrap/lab/version
    Description: Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]
